--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
-<div class="asdf">hello world </div>
+<div class="asdf">hello worlddddddddddddddddd</div>
 	</body>
 </html>
